--- a/.NETcoursePaper/EditTestClient/EditTestClient/MainWindow.xaml
+++ b/.NETcoursePaper/EditTestClient/EditTestClient/MainWindow.xaml
@@ -3,7 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EditTestClient" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:command="http://www.galasoft.ch/mvvmlight" xmlns:converters="clr-namespace:EditTestClient.Common.Extensions;assembly=EditTestClient.Common"
+        xmlns:local="clr-namespace:EditTestClient"
+		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+		xmlns:command="http://www.galasoft.ch/mvvmlight"
+		xmlns:converters="clr-namespace:EditTestClient.Common.Extensions;assembly=EditTestClient.Common"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1000"
         DataContext="{Binding Main,Source={StaticResource Locator}}">
